syntax = "proto2";
package protobuf.app;
option java_package = "com.efun.game.protobuf.app";
option java_outer_classname = "BaseRespProto";

message BaseResp {
    required int64 errorCode = 1; // 错误码
    required string errorMessage = 2; // 错误信息
}